welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: reassignment to val
        estSurBiscuit=vubiscuit
                     ^